--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,14 @@
     "@iconify/icons-mdi": "^1.0.112",
     "@iconify/react": "^1.1.3",
     "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "ace-builds": "^1.4.11",
     "axios": "^0.19.2",
+    "re-resizable": "^6.5.1",
     "react": "^16.13.1",
     "react-ace": "^9.0.0",
     "react-dom": "^16.13.1",
