--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.2.1",
     "ace-builds": "^1.4.11",
     "axios": "^0.19.2",
+    "notistack": "^0.9.17",
     "re-resizable": "^6.5.1",
     "react": "^16.13.1",
     "react-ace": "^9.1.1",
