Add for-all icon

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "Vampire Web Interface",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "for-all-mathematics-symbol.svg",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "for-all-mathematics-symbol192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "for-all-mathematics-symbol512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
