--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "markdown-toc": "^1.2.0"
+    "markdown-toc": "^1.2.0",
+    "socket.io": "^2.3.0"
   }
 }
