--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -8,6 +8,15 @@ server {
     try_files $uri $uri/ /index.html;
   }
 
+  # Configure routing for websockets
+  location /solver {
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_http_version 1.1;
+    proxy_pass https://e-c07kilf601.it.manchester.ac.uk/api/solver;
+    # proxy_pass http://localhost:8080/solver;
+  }
+
   error_page   500 502 503 504  /50x.html;
 
   location = /50x.html {
